@@ -23,9 +23,15 @@ ___
 ### CanPickupGridEntity () {: aria-label='Functions' }
 #### boolean CanPickupGridEntity ( int GridIndex ) {: .copyable aria-label='Functions' }
 Returns true if the gridentity at the given position can be picked up.
+
 ___
 ### CanSpawnObstacleAtPosition () {: aria-label='Functions' }
 #### boolean CanSpawnObstacleAtPosition ( int GridIndex, boolean Force ) {: .copyable aria-label='Functions' }
+
+___
+### DoLightningStrike () {: aria-label='Functions' }
+#### void DoLightningStrike ( int Seed = Random() ) {: .copyable aria-label='Functions' }
+Creates a lightning effect as seen in Downpour. `Seed` determines [intensity](Room.md#getlightningintensity) (`1.3 + RandomFloat()*.6`) and sound pitch (`0.9 + RandomFloat()*0.2`).
 
 ___
 ### GetBackdrop () {: aria-label='Functions' }
